# ROSProject

./: README.md  garbge.py
devel/: .catkin
devel/include/turtlesim1/: Color.h  Kill.h  Kill1Request.h  KillRequest.h  KillResponse.h  SetPen.h  SetPen1Request.h  SetPenRequest.h  SetPenResponse.h  Spawn.h  Spawn1.h  SpawnRequest.h  SpawnResponse.h  TeleportAbsolute.h  TeleportAbsolute1.h  TeleportAbsoluteRequest.h  TeleportAbsoluteResponse.h  TeleportRelative.h  TeleportRelative1Response.h  TeleportRelativeRequest.h  TeleportRelativeResponse.h
devel/lib/python2.7/dist-packages/turtlesim1/msg/: _Color.py  _Pose.py
devel/lib/python2.7/dist-packages/turtlesim1/srv/: _Kill.py  _SetPen.py  _Spawn.py  _TeleportAbsolute.py  _TeleportRelative.py  __init__.py
devel/lib/turtlesim1/: turtle_teleop_key1
devel/share/common-lisp/ros/turtlesim1/msg/: Pose.lisp  _package.lisp  _package_Color.lisp  _package_Pose.lisp
devel/share/common-lisp/ros/turtlesim1/srv/: Kill.lisp  SetPen.lisp  Spawn.lisp  TeleportAbsolute.lisp  TeleportRelative.lisp  _package.lisp  _package_SetPen1.lisp  _package_Spawn1.lisp  _package_TeleportAbsolute.lisp  _package_TeleportRelative.lisp  turtlesim1-srv.asd
src/draw_square/src/: draw_square.cpp
src/turtlesim1/: CMakeLists.txt  package.xml
src/turtlesim1/include/turtlesim1/: turtle1.h  turtle_frame.h  turtle_frame1.h
src/turtlesim1/msg/: Color1.msg
src/turtlesim1/src/: turtle1.cpp  turtle_frame1.cpp  turtlesim1.cpp
src/turtlesim1/srv/: SetPen.srv
workspace/: garbge.py
workspace/devel/: .rosinstall  _setup_util.py  setup.sh
workspace/devel/include/ping/: PingPong.h
workspace/devel/include/pingclient/: PingPong.h  PingPongRequest.h  PingPongResponse.h
workspace/devel/include/turtlesim1/: SetPen1.h  SetPen1Response.h  Spawn1Request.h  TeleportAbsolute1Request.h  TeleportAbsolute1Response.h  TeleportRelative1.h  TeleportRelative1Request.h
workspace/devel/lib/draw_square/: draw_square
workspace/devel/lib/ping/: pingnode
workspace/devel/lib/pingclient/: pingclientnode  pongservernode
workspace/devel/lib/pkgconfig/: draw_square.pc  ping.pc  pingclient.pc  pong.pc  pongserver.pc  turtlesim1.pc
workspace/devel/lib/pong/: pongnode
workspace/devel/lib/pongserver/: pongservernode
workspace/devel/lib/python2.7/dist-packages/ping/msg/: _PingPong.py  __init__.py
workspace/devel/lib/python2.7/dist-packages/pingclient/srv/: _PingPong.py
workspace/devel/lib/python2.7/dist-packages/turtlesim1/srv/: _Kill1.py  _SetPen1.py  _Spawn1.py  _TeleportRelative1.py
workspace/devel/lib/turtlesim1/: turtlesim1_node
workspace/devel/share/common-lisp/ros/ping/msg/: PingPong.lisp  _package.lisp  _package_PingPong.lisp  ping-msg.asd
workspace/devel/share/common-lisp/ros/pingclient/srv/: PingPong.lisp  _package.lisp  _package_PingPong.lisp  pingclient-srv.asd
workspace/devel/share/common-lisp/ros/turtlesim1/msg/: Color.lisp
workspace/devel/share/common-lisp/ros/turtlesim1/srv/: Kill1.lisp  SetPen1.lisp  TeleportRelative1.lisp
workspace/devel/share/draw_square/cmake/: draw_squareConfig.cmake
workspace/devel/share/ping/cmake/: ping-msg-extras.cmake  ping-msg-paths.cmake  pingConfig.cmake
workspace/devel/share/pingclient/cmake/: pingclient-msg-extras.cmake  pingclient-msg-paths.cmake  pingclientConfig.cmake
workspace/devel/share/pong/cmake/: pong-msg-extras.cmake  pong-msg-paths.cmake  pongConfig.cmake
workspace/devel/share/pongserver/cmake/: pongserverConfig.cmake
workspace/devel/share/turtlesim1/cmake/: turtlesim1Config.cmake
workspace/src/draw_square/: CMakeLists.txt  package.xml
workspace/src/ping/: CMakeLists.txt  package.xml
workspace/src/ping/msg/: PingPong.msg
workspace/src/ping/src/: ping.cpp
workspace/src/pingclient/: CMakeLists.txt  package.xml
workspace/src/pingclient/src/: pingclient.cpp  pongserver.cpp
workspace/src/pingclient/srv/: PingPong.srv
workspace/src/pong/: CMakeLists.txt  package.xml
workspace/src/pong/src/: pong.cpp
workspace/src/turtlesim1/: .CMakeLists.txt.swp  trident.launch
workspace/src/turtlesim1/include/turtlesim1/: .turtle_frame1.h.swp  turtle1.h  turtle_frame1.h
workspace/workspace/devel/include/turtlesim1/: Kill1.h  Kill1Response.h  Pose.h  Spawn1Response.h
workspace/workspace/devel/lib/python2.7/dist-packages/turtlesim1/srv/: _TeleportAbsolute1.py
workspace/workspace/devel/share/common-lisp/ros/turtlesim1/msg/: turtlesim1-msg.asd
workspace/workspace/devel/share/common-lisp/ros/turtlesim1/srv/: Spawn1.lisp  TeleportAbsolute1.lisp  _package.lisp  _package_Kill1.lisp
workspace/workspace/devel/share/turtlesim1/cmake/: turtlesim1-msg-extras.cmake  turtlesim1-msg-paths.cmake
workspace/workspace/src/turtlesim1/: CMakeLists.txt
workspace/workspace/src/turtlesim1/src/: turtle1.cpp  turtlesim1.cpp
workspace/workspace/src/turtlesim1/teleop/: teleop_turtle_key1.cpp
